# Gerber2PDF

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Example batch file.bat  Makefile  ReadMe.md  ReadMe.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md  question.md
CodeBlocks/: Gerber2pdf.cbp  Gerber2pdf.depend  Gerber2pdf.layout  main.cpp  main.h
CodeBlocks/Resources/: Helvetica_afm.h  resource.rc
Docs/: Readme.md
Engine/: .gitignore  Engine.cpp  Engine.h  Makefile  main.cpp  main.h
Examples/Command Scripts/: Convert_to_pdf.cmd  Readme.md
Examples/USB PIC/: Convert.bat  Convert.sh  Readme.md  board_outline.grb  bottom_copper.grb  bottom_silk.grb  bottom_solder_mask.grb  drill_file.drl  drill_file.drl.grb  top_copper.grb  top_silk.grb  top_solder_mask.grb
Examples/gerber_x2_example_1/: Convert.bat  Gerber_PCB_Data_-_Example_1_Copper$L1.gbr  Gerber_PCB_Data_-_Example_1_Copper$L2.gbr  Gerber_PCB_Data_-_Example_1_Copper$L3.gbr  Gerber_PCB_Data_-_Example_1_Copper$L4.gbr  Gerber_PCB_Data_-_Example_1_Legend$Bot.gbr  Gerber_PCB_Data_-_Example_1_Legend$Top.gbr  Gerber_PCB_Data_-_Example_1_NPTH$Drill.gbr  Gerber_PCB_Data_-_Example_1_NPTH$Rout.gbr  Gerber_PCB_Data_-_Example_1_PTH$Drill.gbr  Gerber_PCB_Data_-_Example_1_Profile.gbr  Gerber_PCB_Data_-_Example_1_Soldermask$Bot.gbr  Gerber_PCB_Data_-_Example_1_Soldermask$Top.gbr
Examples/pcb_fabrication_data_in_gerber_example_1/: Convert.bat  Convert.sh  PCB_Fabrication_Data_in_Gerber_Example_1_Copper$L1.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Copper$L2.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Copper$L3.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Copper$L4.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Legend$Bot.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Legend$Top.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_NPTH$Drill.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_NPTH$Rout.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_PTH$Drill.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Profile.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Soldermask$Bot.gbr  PCB_Fabrication_Data_in_Gerber_Example_1_Soldermask$Top.gbr  Readme.md
Examples/pcb_fabrication_data_in_gerber_example_2/: Convert.bat  Convert.sh  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L1$Top.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L10$Bot.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L2$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L3$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L4$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L5$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L6$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L7$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L8$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Copper$L9$Inr.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Legend$Bot.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Legend$Top.gbr  PCB_Fabrication_Data_in_Gerber_Example_2_Profile$NP.gbr  (+7 more)
GUI/: .gitignore  Makefile  custom_widgets.hpp  file_chooser.cpp  gerber_list_box.cpp  gtk_utils.hpp  gui_main.cpp  gui_main.hpp  imgui_utils.hpp  logic.cpp  logic.hpp  main.cpp  meson.build  view.cpp  view.hpp  windows-i686-cross.txt
GUI/dist.win/: README.md
GUI/glade/: file_chooser.glade  gerber_row.glade  page_break.glade  ui.glade
GUI/notes/: .gitignore  LocalAppData.cpp  Readme.md
GUI/pch/: pch.hpp
Source/: Engine.cpp  Engine.h  Makefile  main.cpp  main.h
(+214 files in other folders)
